@@ -916,22 +916,21 @@ static apr_status_t handle_response(serf_request_t *request,
      * themselves by not registering credential callbacks.
      */
     if (request->conn->ctx->cred_cb) {
-        status = serf__handle_auth_response(&consumed_response,
-                                            request,
-                                            request->resp_bkt,
-                                            request->handler_baton,
-                                            pool);
+      status = serf__handle_auth_response(&consumed_response,
+                                          request,
+                                          request->resp_bkt,
+                                          request->handler_baton,
+                                          pool);
 
-        if (SERF_BUCKET_READ_ERROR(status)) {
-            /* Report the request as 'died'/'cancelled' to the application */
-            (void)(*request->handler)(request,
-                                      NULL,
-                                      request->handler_baton,
-                                      pool);
-        }
+      /* If there was an error reading the response (maybe there wasn't
+         enough data available), don't bother passing the response to the
+         application.
 
-        if (status)
-            return status;
+         If the authentication was tried, but failed, pass the response
+         to the application, maybe it can do better. */
+      if (status) {
+          return status;
+      }
     }
 
     if (!consumed_response) {
